...
    decimals: 0,
    chartRange: { min: 0, max: 50 },
    controlId: 'speed',
    abs: true,
  },
  duty: {
    label: 'Duty Cycle',
    unit: '%',
    color: theme.telemetry.duty,
    decimals: 0,
    chartRange: { min: 0, max: 100 },
    controlId: 'duty',
  },
...
